kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: atolye15-demo-service
  namespace: stage
spec:
  selector:
    app: atolye15-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
